--- a/addons/sourcemod/translations/chi/weapons.phrases.txt
+++ b/addons/sourcemod/translations/chi/weapons.phrases.txt
@@ -2,7 +2,7 @@
 {
 	"WSMenuTitle"
 	{
-		"chi"	"武器皮肤菜单"
+		"chi"	"武器皮肤菜单（新增：激流大行动武器）"
 	}
 	"ChooseKnife"
 	{
@@ -80,9 +80,21 @@
 	{
 		"chi"	"★ 您自己的刀"
 	}
+	"RandomKnife"
+	{
+		"chi"	"★ 随机选择刀"
+	}
 	"SetSkin"
 	{
 		"chi"	"选择皮肤"
+	}
+	"Paints"
+	{
+		"chi"	"使用其他皮肤"
+	}
+	"Applyother"
+	{
+		"chi"	"应用到对面队伍"
 	}
 	"SetFloat"
 	{
@@ -396,9 +408,9 @@
 	{
 		"chi"	"图案模板编号已保存。"
 	}
-        "Seed"
-        {
-                "chi"   "图案模板编号"
+    "Seed"
+    {
+        "chi"   "图案模板编号"
 	}
 	"SeedDisabled"
 	{
@@ -415,5 +427,25 @@
 	"ResetSeed"
 	{
 		"chi"	"重置图案模板"
+	}
+	"FloatSet"
+	{
+		"chi"	"输入指定值"
+	}
+	"FloatSetInstruction"
+	{
+		"chi"	"请将你希望设置的磨损值输入至聊天框。如需取消，请输入 !cancel 。"
+	}
+	"FloatSetSuccess"
+	{
+		"chi"	"磨损值应用成功！"
+	}
+	"FloatSetCancelled"
+	{
+		"chi"	"磨损值设置中断。"
+	}
+	"FloatSetFailed"
+	{
+		"chi"	"磨损值无效 (0 - 1)"
 	}
 }
